# kucoinTrade

./: Dockerfile  README.md  pyproject.toml
kucointrade/: __init__.py
tests/: test_kucoin_trade.py
