[tool.poetry]
name = "kucoinTrade"
version = "0.1.0"
description = ""
authors = ["ZigaMr <ziga.mrzljak93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.scripts]
start = "kucointrade:run"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.18.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
